# meson-cortexm-template

./: .gitignore  README.md  cross-file  meson.build  meson_options.txt
bsp/host/: meson.build
bsp/host/inc/: bsp.h
bsp/native/: bsp.c  meson.build
docs/: Doxyfile.in  conf.py.in  index.rst  meson.build
src/: meson.build
